@@ -1,6 +1,8 @@
 2005-11-30 Perry
  PATCH: [ 1369657 ] Delete unused variable DiffFuncStruct::msgStatusUpdate
-  Src/DiffThread.cpp
+  Src: DiffThread.cpp
+ BUG: [ 1369856 ] Crashed when interface language is changed
+  Src: DirDoc.cpp
 
 2005-11-30 Kimmo
  PATCH: [ 1369544 ] Catalan translation update
